v1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: application
          image: learnk8s/demo:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 1
            httpGet:
              path: /health
              port: 3000
